--- a/package.json
+++ b/package.json
@@ -6,8 +6,15 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@vitejs/plugin-vue": "^5.1.4",
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0"
+    },
+    "dependencies": {
+        "pinia": "^2.2.4",
+        "vue": "^3.5.12",
+        "vue-loader": "^17.4.2",
+        "vue-router": "^4.4.5"
     }
 }
